force-app/main/default/objects/NSSales_Opportunity_Lanes__c/NSSales_Opportunity_Lanes__c.object-meta.xml
<CustomObject>
    <label>Opportunity Lanes</label>
    <nameField>
        <displayFormat>OL-{0000}</displayFormat>
        <label>Oppty Lanes Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Lanes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>