force-app/main/default/objects/NSSales_Opportunity_Lanes__c/fields/Dest_Location__c.field-meta.xml
<CustomField>
    <fullName>Dest_Location__c</fullName>
    <description>Destination city, Destination state</description>
    <formula>NSSales_DestinCity__c &amp;&quot;,&quot; &amp;  NSSales_DestinState__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Destination city, Destination state</inlineHelpText>
    <label>Destination</label>
    <type>Text</type>
</CustomField>