force-app/main/default/objects/NSSales_Opportunity_Lanes__c/fields/fmlSTCC__c.field-meta.xml
<CustomField>
    <fullName>fmlSTCC__c</fullName>
    <formula>IF(ISBLANK(NSSales_STCC__c),
IF(ISBLANK(STCC_Group__c), NULL,STCC_Group__c), 
NSSales_STCC__c)</formula>
    <label>STCC</label>
    <type>Text</type>
</CustomField>