force-app/main/default/objects/NSSales_Opportunity_Lanes__c/fields/NS_Sales_Origin_Group_City__c.field-meta.xml
<CustomField>
    <fullName>NS_Sales_Origin_Group_City__c</fullName>
    <label>Origin Group City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>