force-app/main/default/objects/NSSales_Opportunity_Lanes__c/fields/NSSales_Alk_Fuel_Miles__c.field-meta.xml
<CustomField>
    <fullName>NSSales_Alk_Fuel_Miles__c</fullName>
    <label>Alk Fuel Miles</label>
    <length>100</length>
    <type>Text</type>
</CustomField>