force-app/main/default/objects/NSSales_Opportunity_Lanes__c/fields/NSSales_Basis__c.field-meta.xml
<CustomField>
    <fullName>NSSales_Basis__c</fullName>
    <description>Rate Basis</description>
    <label>Rate Basis</label>
    <length>100</length>
    <type>Text</type>
</CustomField>