force-app/main/default/objects/NSSales_Opportunity_Lanes__c/fields/NSSales_Carloads_Moved__c.field-meta.xml
<CustomField>
    <fullName>NSSales_Carloads_Moved__c</fullName>
    <label>Carloads Moved</label>
    <length>255</length>
    <type>Text</type>
</CustomField>