force-app/main/default/objects/NSSales_Opportunity_Lanes__c/fields/NSSales_CarOwnership__c.field-meta.xml
<CustomField>
    <fullName>NSSales_CarOwnership__c</fullName>
    <label>CarOwnership</label>
    <length>100</length>
    <type>Text</type>
</CustomField>