force-app/main/default/objects/NSSales_Opportunity_Lanes__c/fields/NSSales_CarType__c.field-meta.xml
<CustomField>
    <fullName>NSSales_CarType__c</fullName>
    <label>Car Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>