force-app/main/default/objects/NSSales_Opportunity_Lanes__c/fields/NSSales_Committed_Volume__c.field-meta.xml
<CustomField>
    <fullName>NSSales_Committed_Volume__c</fullName>
    <description>Committed volume, typically available after rate is published</description>
    <inlineHelpText>Committed volume</inlineHelpText>
    <label>Committed Volume</label>
    <length>255</length>
    <type>Text</type>
</CustomField>