force-app/main/default/objects/NSSales_Opportunity_Lanes__c/fields/NSSales_CompetitionType__c.field-meta.xml
<CustomField>
    <fullName>NSSales_CompetitionType__c</fullName>
    <label>Competition Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>