force-app/main/default/objects/NSSales_Opportunity_Lanes__c/fields/NSSales_Destination_Group_City__c.field-meta.xml
<CustomField>
    <fullName>NSSales_Destination_Group_City__c</fullName>
    <label>Destination Group City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>