force-app/main/default/objects/NSSales_Opportunity_Lanes__c/fields/NSSales_Destination_Group_Number__c.field-meta.xml
<CustomField>
    <fullName>NSSales_Destination_Group_Number__c</fullName>
    <label>Destination Group Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>