force-app/main/default/objects/NSSales_Opportunity_Lanes__c/fields/NSSales_DestinCity__c.field-meta.xml
<CustomField>
    <fullName>NSSales_DestinCity__c</fullName>
    <label>Destin City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>