force-app/main/default/objects/NSSales_Opportunity_Lanes__c/fields/NSSales_DestinHandlingLine__c.field-meta.xml
<CustomField>
    <fullName>NSSales_DestinHandlingLine__c</fullName>
    <label>Destin Handling Line</label>
    <length>100</length>
    <type>Text</type>
</CustomField>