force-app/main/default/objects/NSSales_Opportunity_Lanes__c/fields/NSSales_DestinRoad__c.field-meta.xml
<CustomField>
    <fullName>NSSales_DestinRoad__c</fullName>
    <label>Destination Road</label>
    <length>100</length>
    <type>Text</type>
</CustomField>