force-app/main/default/objects/NSSales_Opportunity_Lanes__c/fields/NSSales_DestinState__c.field-meta.xml
<CustomField>
    <fullName>NSSales_DestinState__c</fullName>
    <label>Destination State</label>
    <length>100</length>
    <type>Text</type>
</CustomField>