force-app/main/default/objects/NSSales_Opportunity_Lanes__c/fields/NSSales_DestinStation__c.field-meta.xml
<CustomField>
    <fullName>NSSales_DestinStation__c</fullName>
    <label>DestinStation</label>
    <length>100</length>
    <type>Text</type>
</CustomField>