force-app/main/default/objects/NSSales_Opportunity_Lanes__c/fields/NSSales_EP_Days_Online__c.field-meta.xml
<CustomField>
    <fullName>NSSales_EP_Days_Online__c</fullName>
    <label>EP Days Online</label>
    <length>100</length>
    <type>Text</type>
</CustomField>