force-app/main/default/objects/NSSales_Opportunity_Lanes__c/fields/NSSales_EP_Equip_Cost__c.field-meta.xml
<CustomField>
    <fullName>NSSales_EP_Equip_Cost__c</fullName>
    <label>EP Equip Cost</label>
    <length>100</length>
    <type>Text</type>
</CustomField>