force-app/main/default/objects/NSSales_Opportunity_Lanes__c/fields/NSSales_EP_Loaded_Miles__c.field-meta.xml
<CustomField>
    <fullName>NSSales_EP_Loaded_Miles__c</fullName>
    <label>EP Loaded Miles</label>
    <length>100</length>
    <type>Text</type>
</CustomField>