force-app/main/default/objects/NSSales_Opportunity_Lanes__c/fields/NSSales_EP_Tons__c.field-meta.xml
<CustomField>
    <fullName>NSSales_EP_Tons__c</fullName>
    <label>EP_Tons</label>
    <length>100</length>
    <type>Text</type>
</CustomField>