force-app/main/default/objects/NSSales_Opportunity_Lanes__c/fields/NSSales_EstRate__c.field-meta.xml
<CustomField>
    <fullName>NSSales_EstRate__c</fullName>
    <label>Estimated Rate</label>
    <length>100</length>
    <type>Text</type>
</CustomField>