force-app/main/default/objects/NSSales_Opportunity_Lanes__c/fields/NSSales_EstVolume__c.field-meta.xml
<CustomField>
    <fullName>NSSales_EstVolume__c</fullName>
    <description>Estimated volume.</description>
    <inlineHelpText>Estimated volume.</inlineHelpText>
    <label>Estimated Volume</label>
    <length>100</length>
    <type>Text</type>
</CustomField>