force-app/main/default/objects/NSSales_Opportunity_Lanes__c/fields/NSSales_EstVolumePeriod__c.field-meta.xml
<CustomField>
    <fullName>NSSales_EstVolumePeriod__c</fullName>
    <label>EstVolumePeriod</label>
    <length>100</length>
    <type>Text</type>
</CustomField>