force-app/main/default/objects/NSSales_Opportunity_Lanes__c/fields/NSSales_EstVolumeUnits__c.field-meta.xml
<CustomField>
    <fullName>NSSales_EstVolumeUnits__c</fullName>
    <label>EstVolumeUnits</label>
    <length>100</length>
    <type>Text</type>
</CustomField>