force-app/main/default/objects/NSSales_Opportunity_Lanes__c/fields/NSSales_Expiring_rate__c.field-meta.xml
<CustomField>
    <fullName>NSSales_Expiring_rate__c</fullName>
    <description>Expiring Thru Rate</description>
    <label>Expiring Thru Rate</label>
    <length>100</length>
    <type>Text</type>
</CustomField>