force-app/main/default/objects/NSSales_Opportunity_Lanes__c/fields/NSSales_Final_Rate_Update__c.field-meta.xml
<CustomField>
    <fullName>NSSales_Final_Rate_Update__c</fullName>
    <description>This field is updated through workflow when final rate field is changed.</description>
    <label>Final Rate Update</label>
    <type>Date</type>
</CustomField>