force-app/main/default/objects/NSSales_Opportunity_Lanes__c/fields/NSSales_Lading__c.field-meta.xml
<CustomField>
    <fullName>NSSales_Lading__c</fullName>
    <label>Lading</label>
    <length>100</length>
    <type>Text</type>
</CustomField>