force-app/main/default/objects/NSSales_Opportunity_Lanes__c/fields/NSSales_Lane_Status__c.field-meta.xml
<CustomField>
    <fullName>NSSales_Lane_Status__c</fullName>
    <label>Lane Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>