force-app/main/default/objects/NSSales_Opportunity_Lanes__c/fields/NSSales_LaneId__c.field-meta.xml
<CustomField>
    <fullName>NSSales_LaneId__c</fullName>
    <externalId>true</externalId>
    <label>LaneId</label>
    <length>100</length>
    <type>Text</type>
</CustomField>