force-app/main/default/objects/NSSales_Opportunity_Lanes__c/fields/NSSales_MinCars__c.field-meta.xml
<CustomField>
    <fullName>NSSales_MinCars__c</fullName>
    <description>Min Cars</description>
    <label>Min Cars</label>
    <length>100</length>
    <type>Text</type>
</CustomField>