force-app/main/default/objects/NSSales_Opportunity_Lanes__c/fields/NSSales_MinCarsPeriod__c.field-meta.xml
<CustomField>
    <fullName>NSSales_MinCarsPeriod__c</fullName>
    <label>MinCarsPeriod</label>
    <length>100</length>
    <type>Text</type>
</CustomField>