force-app/main/default/objects/NSSales_Opportunity_Lanes__c/fields/NSSales_MinWeight__c.field-meta.xml
<CustomField>
    <fullName>NSSales_MinWeight__c</fullName>
    <label>MinWeight</label>
    <length>100</length>
    <type>Text</type>
</CustomField>