force-app/main/default/objects/NSSales_Opportunity_Lanes__c/fields/NSSales_MinWeightUnits__c.field-meta.xml
<CustomField>
    <fullName>NSSales_MinWeightUnits__c</fullName>
    <label>MinWeightUnits</label>
    <length>100</length>
    <type>Text</type>
</CustomField>