force-app/main/default/objects/NSSales_Opportunity_Lanes__c/fields/NSSales_New_NS_Factor__c.field-meta.xml
<CustomField>
    <fullName>NSSales_New_NS_Factor__c</fullName>
    <label>New NS Factor</label>
    <length>100</length>
    <type>Text</type>
</CustomField>