force-app/main/default/objects/NSSales_Opportunity_Lanes__c/fields/NSSales_New_Rate__c.field-meta.xml
<CustomField>
    <fullName>NSSales_New_Rate__c</fullName>
    <label>New Thru Rate</label>
    <length>100</length>
    <type>Text</type>
</CustomField>