force-app/main/default/objects/NSSales_Opportunity_Lanes__c/fields/NSSales_OfferId__c.field-meta.xml
<CustomField>
    <fullName>NSSales_OfferId__c</fullName>
    <label>OfferId</label>
    <length>100</length>
    <type>Text</type>
</CustomField>