force-app/main/default/objects/NSSales_Opportunity_Lanes__c/fields/NSSales_OffRamp__c.field-meta.xml
<CustomField>
    <fullName>NSSales_OffRamp__c</fullName>
    <label>OffRamp</label>
    <length>100</length>
    <type>Text</type>
</CustomField>