force-app/main/default/objects/NSSales_Opportunity_Lanes__c/fields/NSSales_OnRamp__c.field-meta.xml
<CustomField>
    <fullName>NSSales_OnRamp__c</fullName>
    <label>On Ramp</label>
    <length>100</length>
    <type>Text</type>
</CustomField>