force-app/main/default/objects/NSSales_Opportunity_Lanes__c/fields/NSSales_Origin_Group_Street__c.field-meta.xml
<CustomField>
    <fullName>NSSales_Origin_Group_Street__c</fullName>
    <label>Origin Group State</label>
    <length>100</length>
    <type>Text</type>
</CustomField>