force-app/main/default/objects/NSSales_Opportunity_Lanes__c/fields/NSSales_OriginCity__c.field-meta.xml
<CustomField>
    <fullName>NSSales_OriginCity__c</fullName>
    <label>Origin City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>