force-app/main/default/objects/NSSales_Opportunity_Lanes__c/fields/NSSales_OriginHandlingLine__c.field-meta.xml
<CustomField>
    <fullName>NSSales_OriginHandlingLine__c</fullName>
    <label>Origin Handling Line</label>
    <length>100</length>
    <type>Text</type>
</CustomField>