force-app/main/default/objects/NSSales_Opportunity_Lanes__c/fields/NSSales_OriginRoad__c.field-meta.xml
<CustomField>
    <fullName>NSSales_OriginRoad__c</fullName>
    <description>Origin road</description>
    <inlineHelpText>Origin road</inlineHelpText>
    <label>Origin Road</label>
    <length>100</length>
    <type>Text</type>
</CustomField>