force-app/main/default/objects/NSSales_Opportunity_Lanes__c/fields/NSSales_OriginState__c.field-meta.xml
<CustomField>
    <fullName>NSSales_OriginState__c</fullName>
    <label>OriginState</label>
    <length>100</length>
    <type>Text</type>
</CustomField>