force-app/main/default/objects/NSSales_Opportunity_Lanes__c/fields/NSSales_OriginStation__c.field-meta.xml
<CustomField>
    <fullName>NSSales_OriginStation__c</fullName>
    <label>OriginStation</label>
    <length>100</length>
    <type>Text</type>
</CustomField>