force-app/main/default/objects/NSSales_Opportunity_Lanes__c/fields/NSSales_PrivateRate__c.field-meta.xml
<CustomField>
    <fullName>NSSales_PrivateRate__c</fullName>
    <label>PrivateRate</label>
    <length>100</length>
    <type>Text</type>
</CustomField>