force-app/main/default/objects/NSSales_Opportunity_Lanes__c/fields/NSSales_RateSource__c.field-meta.xml
<CustomField>
    <fullName>NSSales_RateSource__c</fullName>
    <label>RateSource</label>
    <length>100</length>
    <type>Text</type>
</CustomField>