force-app/main/default/objects/NSSales_Opportunity_Lanes__c/fields/NSSales_Receiver__c.field-meta.xml
<CustomField>
    <fullName>NSSales_Receiver__c</fullName>
    <label>Receiver</label>
    <length>100</length>
    <type>Text</type>
</CustomField>