force-app/main/default/objects/NSSales_Opportunity_Lanes__c/fields/NSSales_Recommended_Rate__c.field-meta.xml
<CustomField>
    <fullName>NSSales_Recommended_Rate__c</fullName>
    <label>Recommended Rate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>