force-app/main/default/objects/NSSales_Opportunity_Lanes__c/fields/NSSales_RequestId__c.field-meta.xml
<CustomField>
    <fullName>NSSales_RequestId__c</fullName>
    <label>RequestId</label>
    <length>100</length>
    <type>Text</type>
</CustomField>