force-app/main/default/objects/NSSales_Opportunity_Lanes__c/fields/NSSales_Round_1_Rate__c.field-meta.xml
<CustomField>
    <fullName>NSSales_Round_1_Rate__c</fullName>
    <label>Initial Offer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>