force-app/main/default/objects/NSSales_Opportunity_Lanes__c/fields/NSSales_Round_1_Rate_Update__c.field-meta.xml
<CustomField>
    <fullName>NSSales_Round_1_Rate_Update__c</fullName>
    <description>This field is updated through workflow when round-1 rate field is changed.</description>
    <label>Initial Rate Update Date</label>
    <type>Date</type>
</CustomField>