force-app/main/default/objects/NSSales_Opportunity_Lanes__c/fields/NSSales_Route__c.field-meta.xml
<CustomField>
    <fullName>NSSales_Route__c</fullName>
    <label>Route</label>
    <length>100</length>
    <type>Text</type>
</CustomField>