force-app/main/default/objects/NSSales_Opportunity_Lanes__c/fields/NSSales_Shipper__c.field-meta.xml
<CustomField>
    <fullName>NSSales_Shipper__c</fullName>
    <label>Shipper</label>
    <length>100</length>
    <type>Text</type>
</CustomField>