force-app/main/default/objects/NSSales_Opportunity_Lanes__c/fields/NSSales_STCC__c.field-meta.xml
<CustomField>
    <fullName>NSSales_STCC__c</fullName>
    <label>STCC Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>