force-app/main/default/objects/NSSales_Opportunity_Lanes__c/fields/NSSales_STCCMajorGroup__c.field-meta.xml
<CustomField>
    <fullName>NSSales_STCCMajorGroup__c</fullName>
    <description>STCC Major Group</description>
    <label>STCC Major Group</label>
    <length>100</length>
    <type>Text</type>
</CustomField>