force-app/main/default/objects/NSSales_Opportunity_Lanes__c/fields/NSSales_STCCMinorGroup__c.field-meta.xml
<CustomField>
    <fullName>NSSales_STCCMinorGroup__c</fullName>
    <description>STCC Minor Group</description>
    <label>STCC Minor Group</label>
    <length>100</length>
    <type>Text</type>
</CustomField>