force-app/main/default/objects/NSSales_Opportunity_Lanes__c/fields/NSSales_Th_Carloads__c.field-meta.xml
<CustomField>
    <fullName>NSSales_Th_Carloads__c</fullName>
    <label>TH Carloads</label>
    <length>100</length>
    <type>Text</type>
</CustomField>