force-app/main/default/objects/NSSales_Opportunity_Lanes__c/fields/NSSales_TH_NS_Revenue__c.field-meta.xml
<CustomField>
    <fullName>NSSales_TH_NS_Revenue__c</fullName>
    <label>TH NS Revenue</label>
    <length>100</length>
    <type>Text</type>
</CustomField>