force-app/main/default/objects/NSSales_Opportunity_Lanes__c/fields/NSSales_TH_Tons__c.field-meta.xml
<CustomField>
    <fullName>NSSales_TH_Tons__c</fullName>
    <label>TH Tons</label>
    <length>100</length>
    <type>Text</type>
</CustomField>