force-app/main/default/objects/NSSales_Opportunity_Lanes__c/fields/Orig_Location__c.field-meta.xml
<CustomField>
    <fullName>Orig_Location__c</fullName>
    <description>Origin City, Origin State</description>
    <formula>IF(ISBLANK(NSSales_OriginCity__c),
IF(ISBLANK(NS_Sales_Origin_Group_City__c), NULL,(NS_Sales_Origin_Group_City__c &amp; &quot;,&quot; &amp; NSSales_Origin_Group_Street__c)), (NSSales_OriginCity__c &amp; &quot;,&quot; &amp; NSSales_OriginState__c))</formula>
    <inlineHelpText>Origin City, Origin State</inlineHelpText>
    <label>Origin</label>
    <type>Text</type>
</CustomField>