force-app/main/default/objects/NSSales_Opportunity_Lanes__c/fields/STCC_Group__c.field-meta.xml
<CustomField>
    <fullName>STCC_Group__c</fullName>
    <label>STCC Group</label>
    <length>100</length>
    <type>Text</type>
</CustomField>